--- a/NugetManager/NugetManager/NugetManager.csproj
+++ b/NugetManager/NugetManager/NugetManager.csproj
@@ -61,6 +61,7 @@
     <Compile Include="IssueForm.Designer.cs">
       <DependentUpon>IssueForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="IssueFromSolution.cs" />
     <Compile Include="IssuePackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Cmd.cs" />
@@ -81,6 +82,7 @@
   <ItemGroup>
     <VSCTCompile Include="IssuePackage.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
+      <SubType>Designer</SubType>
     </VSCTCompile>
     <Content Include="Resources\package_16px_1173570_easyicon.net.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
